--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson-iflytek</artifactId>
-	<version>1.1.41</version>
+	<version>1.1.41-1</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
